--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   args: ^2.3.1
+  web_socket_channel: ^2.2.0
 
 dev_dependencies:
   flutter_test:
