--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   args: ^2.3.1
   web_socket_channel: ^2.2.0
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
