change package name to flutter_dashboard (we may end up changing this later)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: cole_dashboard
+name: flutter_dashboard
 description: Next-gen dashboard built in Flutter for UKY solar car
 
 # The following line prevents the package from being accidentally published to
