--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
-name: flutter_dashboard
-description: Next-gen dashboard built in Flutter for UKY solar car
+name: uksc_dashboard
+description: Next-gen dashboard for UK solar car
+homepage: https://solarcar.engr.uky.edu/
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
