--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   args: ^2.3.1
   web_socket_channel: ^2.2.0
   provider: ^6.0.3
+  syncfusion_flutter_gauges: ^20.2.48
 
 dev_dependencies:
   flutter_test:
