--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,15 +31,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
   args: ^2.3.1
   web_socket_channel: ^2.2.0
   provider: ^6.0.3
   syncfusion_flutter_gauges: ^20.2.48
-  uuid: ^3.0.7
+  uuid: ^4.0.0
+  desktop_window: ^0.4.0
 
 dev_dependencies:
   flutter_test:
